--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       <th>2017 estimate</th>
     </tr>
     <tr>
+      <td>New York</td>
+      <td>New York</td>
+      <td></td>
+    </tr>
+    <tr>
       <td></td>
       <td></td>
       <td></td>
